# variantagent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: PHASE2_PLAN.md  api-integration-guide.md
docs/architecture/decisions/: 001-langgraph-over-langchain.md  002-mcp-for-database-tools.md  003-deterministic-acmg-engine.md
src/variantagent/: __init__.py  cli.py  config.py
src/variantagent/agents/: __init__.py  annotation_agent.py  classification_agent.py  literature_agent.py  orchestrator.py  qc_agent.py  reviewer_agent.py
src/variantagent/api/: __init__.py  app.py
src/variantagent/mcp_servers/: __init__.py  clinvar_server.py
src/variantagent/models/: __init__.py  annotation.py  classification.py  qc_metrics.py  report.py  variant.py
src/variantagent/tools/: __init__.py  acmg_engine.py  clinvar_client.py  ensembl_client.py  flagstat_parser.py  gnomad_client.py  multiqc_parser.py  pubmed_client.py  vcf_parser.py
tests/: conftest.py
tests/integration/: test_orchestrator.py
tests/unit/: test_acmg_engine.py  test_classification.py  test_clinvar_client.py  test_ensembl_client.py  test_flagstat_parser.py  test_gnomad_client.py  test_qc_agent.py  test_variant_model.py
