[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "variantagent"
version = "0.1.0"
description = "Multi-agent clinical variant interpretation system using LangGraph and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Harshit Ghosh", email = "harshitghosh@gmail.com" },
]
keywords = [
    "bioinformatics",
    "variant-interpretation",
    "acmg",
    "langgraph",
    "mcp",
    "multi-agent",
    "genomics",
    "clinical-genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "litellm>=1.50.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "cyvcf2>=0.31.0",
    "biopython>=1.84",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.3.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "vcrpy>=6.0.0",
    "deepeval>=1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
streamlit = [
    "streamlit>=1.40.0",
]

[project.scripts]
variantagent = "variantagent.cli:app"

[project.urls]
Homepage = "https://github.com/deepmind11/variantagent"
Repository = "https://github.com/deepmind11/variantagent"
Issues = "https://github.com/deepmind11/variantagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/variantagent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=variantagent --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/variantagent"]

[tool.coverage.report]
fail_under = 80
show_missing = true
